--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com" defer></script>
     
     <!-- Manifest File link -->
-    <link rel="manifest"  href="/manifest.json" />
+    <link rel="manifest"  href="manifest.json" />
 </head>
 <!-- <body oncontextmenu="return false;"> -->
 <body>
