NPM package creation and tailwind installation
Currently we build the application from the tailwind cdn which is not
stable. This commit adds a npm package file and installs tailwindcss
locally. The related changes for initializing tailwindcss and building
it and updating the code to use the updated file are also made in this
commit.

--- a/app.html
+++ b/app.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"/>
-    <script src="https://cdn.tailwindcss.com" defer></script>
+    <link href="app.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" rel="stylesheet" />
+    <link href="dist/tailwind.css" rel="stylesheet">
+
     
     <!-- Manifest File link -->
     <link rel="manifest"  href="manifest.json" />
 </head>
 <!-- <body oncontextmenu="return false;"> -->
 <body>
-<script src="app.js"></script>
+<script src="app.js" defer></script>
 <div class="flex flex-col justify-items-center items-center place-content-center border-2 border-yellow-800">
     <div id="root" class="flex flex-col justify-center items-center place-content-center h-screen md:w-3/6 w-screen border-2 border-amber-800 bg-pink-300">
     </div>
